--- a/MonsterHotel/client/src/index.css
+++ b/MonsterHotel/client/src/index.css
@@ -1,13 +1,83 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+main {
+  margin: 2em;
+}
+.app-spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -16px;
+  margin-left: -16px;
+}
+ 
+p {
+    line-height: 2rem;
+}
+button {
+  font-size: 18em;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.post p {
+    white-space: pre-wrap;
+}
+.displayFlex {
+  display: flex;
+}
+.row {
+  direction: row;
+}
+.col {
+  direction: column;
+}
+
+.alignCenter {
+  align-items: center;
+}
+.textAlign {
+  text-align: center;
+}
+.profilePicture {
+  width: 10rem;
+}
+.ticketBadge {
+  border: solid 1px #BCBCBC;
+  width: fit-content;
+}
+.ticketCol {
+  margin: 2rem;
+  width: fit-content;
+}
+.open{
+  background: #BAFFC5;
+  border-radius: 8rem;
+  padding: 1rem;
+  
+}
+.claimed{
+  background: #FFCF54;
+  padding: 1rem;
+  border-radius: 8rem;
+}
+.issue{
+  background: #FF7E7E;
+  padding: 1rem;
+  border-radius: 8rem;
+  color:ivory
+}
+.waiting{
+  background: #84E1FF;
+  padding: 1rem;
+  border-radius: 8rem;
+}
+.closed{
+  background: #817EFF;
+  border-radius: 8rem;
+  padding: 1rem;
+  color:ivory
+}
+.border {
+  border: 1px solid red;
+}
+
+.justifyCenter {
+  justify-content: center;
 }
